[gd_scene load_steps=6 format=3 uid="uid://h3qavtbrmrll"]

[ext_resource type="Script" uid="uid://8ti11wcnr7m1" path="res://Scripts/hud.gd" id="1_sd512"]

[sub_resource type="InputEventKey" id="InputEventKey_sd512"]
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_jo1ms"]
events = [SubResource("InputEventKey_sd512")]

[sub_resource type="InputEventKey" id="InputEventKey_psnte"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_s3jbq"]
events = [SubResource("InputEventKey_psnte")]

[node name="Hud" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_sd512")
metadata/_custom_type_script = "uid://8ti11wcnr7m1"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="Control"]
visible = false
custom_minimum_size = Vector2(150, 80)
layout_direction = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="MessageLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
shortcut = SubResource("Shortcut_jo1ms")
text = "Start Game"

[node name="ExitButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
shortcut = SubResource("Shortcut_s3jbq")
text = "Exit"

[node name="MessageTimer" type="Timer" parent="Control"]
wait_time = 2.0
one_shot = true
